--- a/client/assets/styles/components/_scrollbar.scss
+++ b/client/assets/styles/components/_scrollbar.scss
@@ -3,22 +3,18 @@
   * {
     scrollbar-width: none;
     scrollbar-color: #b5b5b5 #ffffff;
-    margin: 5px 10px 5px 0;
   }
-
   /* Chrome, Edge, and Safari */
   *::-webkit-scrollbar {
-    width: 10px;
+    width: 16px;
   }
 
   *::-webkit-scrollbar-track {
     background: #ffffff;
-    border-radius: 10px;
-    border: 0px solid #000000;
   }
 
   *::-webkit-scrollbar-thumb {
-    background-color: #b5b5b5;
+    background-color: #DCDFE3;
     border-radius: 10px;
-    border: 0px solid #000000;
+    border: 4px solid #ffffff;
   }
