--- a/client/assets/styles/style.css
+++ b/client/assets/styles/style.css
@@ -101,27 +101,40 @@
   padding: 0;
 }
 
-.main {
-  overflow: scroll;
-}
 .main .form {
   margin: 20px 0 0 30px;
   color: #3B3E45;
 }
-.main .form .form__text {
+.main .form form {
+  display: flex;
+}
+.main .form form b {
+  font-size: 24px;
+}
+.main .form form .form__text {
   border-style: solid;
   border-color: #2CBE82;
   border-radius: 10px;
-  padding: 10px 198px 10px 12px;
+  width: 220px;
+  height: 20px;
+  padding: 10px 120px 10px 12px;
   font-weight: 20px;
-  margin-right: 25px;
   border-width: 1px;
   font-family: "Nunito", sans-serif;
 }
-.main .form .form__day {
-  margin-right: 28px;
+.main .form form .form__text .form__text--input {
+  border-style: none;
+  margin: 0 0 10px 40px;
 }
-.main .form .form__day .form__day--select {
+.main .form form .form__text .form__text--input:focus {
+  border-width: 0;
+  border-color: white;
+}
+.main .form form .form__day {
+  margin-right: 32px;
+  margin-left: 25px;
+}
+.main .form form .form__day .form__day--select {
   border-style: solid;
   border-color: #2CBE82;
   height: 44px;
@@ -132,10 +145,10 @@
   color: #3B3E45;
   font-family: "Nunito", sans-serif;
 }
-.main .form .form__time {
+.main .form form .form__time {
   margin-right: 42px;
 }
-.main .form .form__time .form__time--select {
+.main .form form .form__time .form__time--select {
   border-style: solid;
   border-color: #2CBE82;
   height: 44px;
@@ -145,7 +158,7 @@
   color: #3B3E45;
   font-family: "Nunito", sans-serif;
 }
-.main .form .form__button--add {
+.main .form form .form__button--add {
   font-family: "Nunito", sans-serif;
   width: 222px;
   padding: 10px 12px;
@@ -160,10 +173,10 @@
   flex-grow: 0;
   margin-right: 24px;
 }
-.main .form .form__button--add:hover {
+.main .form form .form__button--add:hover {
   cursor: pointer;
 }
-.main .form .form__button--rem {
+.main .form form .form__button--rem {
   font-family: "Nunito", sans-serif;
   width: 184px;
   padding: 10px 12px;
@@ -177,7 +190,7 @@
   border-radius: 10px;
   flex-grow: 0;
 }
-.main .form .form__button--rem:hover {
+.main .form form .form__button--rem:hover {
   cursor: pointer;
 }
 .main .main__section .main__section--buttons {
@@ -199,6 +212,9 @@
   font-size: 17px;
   line-height: 20px;
   cursor: pointer;
+}
+.main .main__section .main__section--buttons li .active {
+  width: 190px;
 }
 .main .main__section .main__section--buttons li .main__section--segunda {
   margin-left: 110px;
@@ -252,20 +268,20 @@
 .main .main__section .main__section--article .list .card {
   display: flex;
   flex-direction: row;
-  margin: 0;
+  margin: 10px 20px 10px 10px;
 }
 .main .main__section .main__section--article .list .card .card__time {
   border-style: solid;
+  margin: 0 10px 0 0;
   color: #3B3E45;
   border-width: 0;
   border-radius: 8px;
-  margin: 10px;
   padding: 30px 20px;
   box-shadow: 0px 4px 24px rgba(168, 168, 168, 0.25);
 }
 .main .main__section .main__section--article .list .card .card__time p {
-  margin: 5px 0px;
-  padding: 10px 5px;
+  margin: 30px 10px;
+  padding: 0px 0px;
   font-size: 17px;
 }
 .main .main__section .main__section--article .list .card .card__time--segunda {
@@ -291,10 +307,16 @@
 }
 .main .main__section .main__section--article .list .card .card__info {
   display: flex;
-  padding: 5px 0;
-  background-color: rgba(168, 168, 168, 0.1);
+  padding: 0;
+  width: 500px;
+  background-color: rgba(168, 168, 168, 0.05);
   border-radius: 15px;
   box-shadow: 0px 4px 24px rgba(168, 168, 168, 0.25);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  border-color: white;
+  border-style: solid;
+  border-width: 1px;
 }
 .main .main__section .main__section--article .list .card .card__info div {
   background: #F55D5D;
@@ -329,10 +351,11 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 20px;
+  width: 450px;
 }
 .main .main__section .main__section--article .list .card .card__info button {
   padding: 10px 12px;
-  margin: 0 20px 95px;
+  margin: 10px 10px 95px;
   background: #98031E;
   border-style: none;
   border-radius: 4px;
@@ -341,6 +364,7 @@
   font-weight: 700;
   font-size: 14px;
   color: #FFFFFF;
+  cursor: pointer;
 }
 .main .main__section .main__section--article .off {
   display: none;
@@ -350,24 +374,21 @@
 * {
   scrollbar-width: none;
   scrollbar-color: #b5b5b5 #ffffff;
-  margin: 5px 10px 5px 0;
 }
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 10px;
+  width: 16px;
 }
 
 *::-webkit-scrollbar-track {
   background: #ffffff;
-  border-radius: 10px;
-  border: 0px solid #000000;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #b5b5b5;
+  background-color: #DCDFE3;
   border-radius: 10px;
-  border: 0px solid #000000;
+  border: 4px solid #ffffff;
 }
 
 * {
@@ -376,14 +397,14 @@
 
 html {
   background-image: url("../imgs/bola-LogoCompasso.png");
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 550px;
   background-position: right 0px top 330px;
-  margin: 0;
 }
 
 body {
   margin: 0;
   font-family: "Poppins" sans-serif;
-  overflow: hidden;
+  margin: 0 10px 0 0;
 }/*# sourceMappingURL=style.css.map */
